Fix overflow of initial outgoing message in zip download

--- a/app/assets/stylesheets/responsive/_print_layout.scss
+++ b/app/assets/stylesheets/responsive/_print_layout.scss
@@ -1,7 +1,6 @@
 div#content, div#left_column, div.entirebody div#wrapper {
   width: 100%;
   margin: 0;
-  float: none;
 }
 
 div#content {
